--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#7FCD8A</color>
+    <color name="gray">#808080</color>
+    <color name="gray_light">#CFCECE</color>
 </resources>
