--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="primary">#7FCD8A</color>
     <color name="gray">#808080</color>
     <color name="gray_light">#CFCECE</color>
+    <color name="bg">#f0f4f7</color>
+    <color name="orange">#efaf52</color>
 </resources>
