Main Activity, ExchargeHistory...

--- a/app/src/main/res/layout/fragment_history_item.xml
+++ b/app/src/main/res/layout/fragment_history_item.xml
@@ -22,9 +22,10 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/sales_promotion" />
+            android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="20dp"
+            app:srcCompat="@drawable/recharge" />
 
         <LinearLayout
             android:id="@+id/item_info"
@@ -34,7 +35,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_namee"
+                android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
