--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,7 +43,7 @@
             android:layout_height="180dp"
             android:layout_alignParentTop="true"
             android:scaleType="fitXY"
-            android:src="@drawable/ImgHome" />
+            android:src="@drawable/img_home" />
 
         <LinearLayout
             android:layout_width="380dp"
@@ -202,7 +202,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/ChamSocDa" />
+                android:src="@drawable/cham_soc_da" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -219,7 +219,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/TriNam" />
+                android:src="@drawable/tri_nam" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -236,7 +236,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/TrietLong" />
+                android:src="@drawable/triet_long" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -253,7 +253,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/TreHoaDa" />
+                android:src="@drawable/tre_hoa_da" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -270,7 +270,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/Massage" />
+                android:src="@drawable/massage" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -287,7 +287,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/TamTrang" />
+                android:src="@drawable/tam_trang" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -304,7 +304,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/TriMun" />
+                android:src="@drawable/tri_mun" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -321,7 +321,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/Collagen" />
+                android:src="@drawable/collagen" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -338,7 +338,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/GiamBeo" />
+                android:src="@drawable/giam_beo" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -355,7 +355,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/PhunXam" />
+                android:src="@drawable/phun_xam" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
