--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="orange">#efaf52</color>
     <color name="green">#42de69</color>
     <color name="red">#F80202</color>
+    <color name="purple_500">#FF6200EE</color>
 </resources>
