--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context=".activity_user_profile">
 
-<!--    <include layout="@layout/toolbar_activity_user_profile" />-->
+    <include layout="@layout/toolbar_activity_user_profile" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +48,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="12dp"
             android:text="Thay đổi số điện thoại"
-            android:textColor="#2985c0"
+            android:textColor="#8BC34A"
             android:textSize="16dp" />
 
         <ImageView
