--- a/app/src/main/res/layout/toolbar_activity_service_detail.xml
+++ b/app/src/main/res/layout/toolbar_activity_service_detail.xml
@@ -26,7 +26,7 @@
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Thông tin tài khoản"
+            android:text="Thông tin dịch vụ"
             android:textStyle="bold"
             android:textSize="20dp"
             android:textColor="@color/white"
