--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="red">#F80202</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="toolbar_color">#32A136</color>
-
+    <color name="star">#FFEB3B</color>
 </resources>
