--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="toolbar_color">#32A136</color>
     <color name="star">#FFEB3B</color>
+    <color name="blue">#2196F3</color>
 </resources>
