Service Detail Activity

--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_service_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".ServiceDetailActivity">
 
         <include
             layout="@layout/toolbar_activity_service_detail" />
@@ -51,6 +54,7 @@
         <!-- Điểm độc đáo -->
 
         <ImageView
+            android:id="@+id/img_service"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -60,7 +64,7 @@
             android:adjustViewBounds="true" />
 
         <TextView
-            android:id="@+id/tv_servic_description"
+            android:id="@+id/tv_service_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Điểm độc đáo: Dịch vụ mát-xa thư giãn với dầu thơm."
@@ -71,7 +75,7 @@
             android:paddingBottom="8dp"/>
 
         <Button
-            android:id="@+id/btn_book"
+            android:id="@+id/btn_book_service"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
