--- a/app/src/main/res/layout/activity_service_detail.xml
+++ b/app/src/main/res/layout/activity_service_detail.xml
@@ -1,121 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_service_item"
+    android:id="@+id/layout_service_detail_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ServiceDetailActivity">
 
-        <include
-            layout="@layout/toolbar_activity_service_detail" />
+    <include
+        layout="@layout/toolbar_activity_service_detail" />
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@android:color/white">
+        android:layout_height="match_parent">
 
-        <!-- Tên dịch vụ -->
-        <TextView
-            android:id="@+id/tv_service_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tên dịch vụ"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="20dp"
-            android:paddingBottom="8dp"/>
+            android:orientation="vertical"
+            android:background="@android:color/white">
 
-        <!-- Giá -->
-        <TextView
-            android:id="@+id/tv_service_price"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="300.000 đ"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:textSize="16sp"
-            android:paddingBottom="8dp"/>
-        <!-- Giá -->
-        <TextView
-            android:id="@+id/tv_service_duration"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="120 phút"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:textSize="16sp"
-            android:paddingBottom="8dp"/>
+            <!-- Tên dịch vụ -->
+            <TextView
+                android:id="@+id/tv_service_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tên dịch vụ"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="20dp"
+                android:paddingBottom="8dp"/>
 
-        <!-- Điểm độc đáo -->
+            <!-- Giá -->
+            <TextView
+                android:id="@+id/tv_service_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="300.000 đ"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:textSize="16sp"
+                android:paddingBottom="8dp"/>
+            <!-- Giá -->
+            <TextView
+                android:id="@+id/tv_service_duration"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="120 phút"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:textSize="16sp"
+                android:paddingBottom="8dp"/>
 
-        <ImageView
-            android:id="@+id/img_service"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/giam_beo"
-            android:adjustViewBounds="true" />
+            <!-- Điểm độc đáo -->
 
-        <TextView
-            android:id="@+id/tv_service_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Điểm độc đáo: Dịch vụ mát-xa thư giãn với dầu thơm."
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:textSize="18sp"
-            android:paddingBottom="8dp"/>
+            <ImageView
+                android:id="@+id/img_service"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/giam_beo"
+                android:adjustViewBounds="true" />
 
-        <Button
-            android:id="@+id/btn_book_service"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:text="Đặt lịch"
-            android:layout_gravity="end"
-            android:layout_marginTop="16dp" />
+            <TextView
+                android:id="@+id/tv_service_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Điểm độc đáo: Dịch vụ mát-xa thư giãn với dầu thơm."
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:textSize="18sp"
+                android:paddingBottom="8dp"/>
 
-        <!-- EditText để nhập bình luận -->
+            <Button
+                android:id="@+id/btn_book_service"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="30dp"
+                android:text="Đặt lịch"
+                android:layout_gravity="end"
+                android:layout_marginTop="16dp" />
 
-        <EditText
-            android:id="@+id/commentEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:hint="Nhập bình luận của bạn..."
-            android:layout_marginTop="18dp" />
+            <!-- EditText để nhập bình luận -->
 
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:isIndicator="false"
-            android:numStars="5"
-            android:rating="0"
-            android:scaleY="0.8"
-            android:scaleX="0.8"
-            android:stepSize="1" />
+            <EditText
+                android:id="@+id/commentEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:hint="Nhập bình luận của bạn..."
+                android:layout_marginTop="18dp" />
 
-        <!-- Button để gửi đánh giá -->
-        <Button
-            android:id="@+id/submitReviewButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gửi đánh giá"
-            android:layout_marginStart="20dp"
-            android:layout_gravity="start"/>
-        <include
-            layout="@layout/item_comment" />
-    </LinearLayout>
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:isIndicator="false"
+                android:numStars="5"
+                android:rating="0"
+                android:scaleY="0.8"
+                android:scaleX="0.8"
+                android:stepSize="1" />
 
+            <!-- Button để gửi đánh giá -->
+            <Button
+                android:id="@+id/submitReviewButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gửi đánh giá"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="start"/>
+            <include
+                layout="@layout/item_comment" />
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.appcompat.widget.LinearLayoutCompat>
