--- a/app/src/main/res/layout/setting_account_item.xml
+++ b/app/src/main/res/layout/setting_account_item.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_setting_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="15dp"
@@ -10,16 +11,38 @@
     android:layout_marginEnd="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="389dp"
+        android:layout_width="match_parent"
         android:layout_height="64dp">
+
+        <ImageView
+            android:id="@+id/img_setting"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/ic_balance"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="145dp"
+            android:layout_width="wrap_content"
             android:layout_height="27dp"
-            android:layout_marginEnd="168dp"
             android:text="TextView"
             android:textStyle="bold"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/img_setting"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.513" />
+
+        <TextView
+            android:id="@+id/tv_title2"
+            android:layout_width="wrap_content"
+            android:layout_height="27dp"
+            android:gravity="end"
+            android:text="TextView"
+            android:layout_marginEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/img_icon"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,10 +51,10 @@
             android:id="@+id/img_icon"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_marginStart="332dp"
+            android:layout_marginEnd="20dp"
             android:src="@drawable/baseline_arrow_forward_ios_24"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
